--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.root {
+  background-image: url("../src/assets/image.jpg");
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +39,74 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.card-title {
+  position: absolute;
+  top: 150px;
+  font-size: 45px;
+
+}
+
+
+.result-display__container {
+  height: 85vh;
+  width: 90vh;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+  display: "flex";
+  justify-content: "center";
+  align-items: "center";
+}
+
+.result-display__card {
+  height: 60%;
+  width: 70%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+}
+
+.result-display__title {
+  display: flex;
+  justify-content: "center";
+  align-items: "center";
+  flex-direction: column;
+}
+
+.page-filler__container {
+  display: flex;
+  height: 85vh;
+  width: 90vh;
+  box-shadow: 0 6px 10px 0 rgba(0,0,0,0.6);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+  flex-direction: column;
+  background-image: url('../src/assets/pig-cute.gif');
+  z-index: 1;
+
+}
+
+
+.page-filler__form-container {
+  display: flex;
+  box-shadow: 0 6px 10px 0 rgba(0,0,0,0.6);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+  width: 90%;
+  height: 50%;
+  flex-direction: column;
+  z-index: 1000;
+  background-color: white;
+}
+
+.form-input {
+  margin-top: 15px;
+}
+
+.home-button {
+  position:absolute;
+  top:75px;
+  left:50px;
 }
