--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .root {
-  background-image: url("../src/assets/image.jpg");
+  display: flex;
 }
 
 .App {
@@ -41,21 +41,44 @@
   }
 }
 
+.app-body {
+  height:100vh
+}
+
+.hero{
+  background-image: url('./assets/purple.jpeg')
+}
+
+
+.row-movie{
+  object-fit: contain;
+  width: 200px;
+  max-height: 150px;
+  margin-right: 10px;
+  transition: transform 450ms;
+}
+
+.row-movie:hover{
+  transform: scale(1.08);
+  opacity: 1;
+}
+
+.row-posters{
+  display: flex;
+  overflow-y: hidden;
+}
+
 .card-title {
   position: absolute;
   top: 150px;
   font-size: 45px;
-
 }
 
 
-.result-display__container {
-  height: 85vh;
-  width: 90vh;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  border-radius: 5px; /* 5px rounded corners */
-  display: "flex";
+.results-container {
+  height: 600px;
+  width: 1000px;
+  display: 'flex';
   justify-content: "center";
   align-items: "center";
 }
@@ -101,7 +124,8 @@
 }
 
 .form-input {
-  margin-top: 15px;
+  margin-top: 25px;
+  margin-bottom: 12px;
 }
 
 .home-button {
